<resources>
    <string name="app_name">SimpleReddit</string>
    <string name="thumbnail_of_picture">Thumbnail of picture</string>
    <string name="author">Author:</string>
    <string name="subreddit">Subreddit:</string>
    <string name="comments_icon">Comments icon</string>
    <string name="comments">comments</string>
    <string name="rating_icon">Rating icon</string>
    <string name="votes">votes</string>
    <string name="warning_icon">warning_icon</string>
    <string name="something_is_wrong_warning">Something is wrong.\nCheck Internet connection and retry loading.</string>
    <string name="retry_button">Retry</string>
</resources>