<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:backgroundTint="@color/white"
    android:elevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_thumbnail"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/thumbnail_of_picture"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_thumbnail"
            tools:text="Title of an post. Title of an post. Title of an post" />

        <TextView
            android:id="@+id/tv_label_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/author"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@id/tv_label_subreddit"
            app:layout_constraintEnd_toStartOf="@id/tv_author"
            app:layout_constraintStart_toEndOf="@id/iv_thumbnail"
            app:layout_constraintTop_toTopOf="@id/iv_thumbnail" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_author"
            app:layout_constraintStart_toEndOf="@id/tv_label_author"
            app:layout_constraintTop_toTopOf="@id/tv_label_author"
            tools:text="Author" />

        <TextView
            android:id="@+id/tv_label_subreddit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/subreddit"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@id/iv_comments"
            app:layout_constraintStart_toEndOf="@id/iv_thumbnail"
            app:layout_constraintTop_toBottomOf="@id/tv_label_author" />

        <TextView
            android:id="@+id/tv_subreddit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_subreddit"
            app:layout_constraintStart_toEndOf="@id/tv_label_subreddit"
            app:layout_constraintTop_toTopOf="@id/tv_label_subreddit"
            tools:text="Subreddit" />

        <ImageView
            android:id="@+id/iv_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/comments_icon"
            android:src="@drawable/ic_comments"
            app:layout_constraintBottom_toTopOf="@id/iv_rating"
            app:layout_constraintEnd_toStartOf="@id/tv_number_of_comments"
            app:layout_constraintStart_toEndOf="@id/iv_thumbnail"
            app:layout_constraintTop_toBottomOf="@id/tv_label_subreddit" />

        <TextView
            android:id="@+id/tv_number_of_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_comments"
            app:layout_constraintEnd_toStartOf="@id/tv_label_comments"
            app:layout_constraintStart_toEndOf="@id/iv_comments"
            app:layout_constraintTop_toTopOf="@id/iv_comments"
            tools:text="1000" />

        <TextView
            android:id="@+id/tv_label_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/comments"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_number_of_comments"
            app:layout_constraintStart_toEndOf="@id/tv_number_of_comments"
            app:layout_constraintTop_toTopOf="@id/tv_number_of_comments" />

        <ImageView
            android:id="@+id/iv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/rating_icon"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@id/iv_thumbnail"
            app:layout_constraintEnd_toStartOf="@id/tv_rating"
            app:layout_constraintStart_toEndOf="@id/iv_thumbnail"
            app:layout_constraintTop_toBottomOf="@id/iv_comments" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_rating"
            app:layout_constraintEnd_toStartOf="@id/tv_label_rating"
            app:layout_constraintStart_toEndOf="@id/iv_rating"
            app:layout_constraintTop_toTopOf="@id/iv_rating"
            tools:text="1000" />

        <TextView
            android:id="@+id/tv_label_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/votes"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tv_rating"
            app:layout_constraintStart_toEndOf="@id/tv_rating"
            app:layout_constraintTop_toTopOf="@id/tv_rating" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="1 hour ago" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>